2015-05-13  Kaz Kylheku  <kaz@kylheku.com>

	Recursive lcons force bug (keep-if*, remove-if*).

	* lib.c (rem_lazy_func): Do not access the cdr field of
	the lcons that we are in the middle of forcing!

2015-05-13  Kaz Kylheku  <kaz@kylheku.com>

	* place.tl (define-modify-macro): New macro.

	* lisplib.c (set_place_dlt_entries): Add define-modify-macro.

2015-05-13  Kaz Kylheku  <kaz@kylheku.com>

	* place.tl (push): Ensure left-to-right eval order.

2015-05-12  Kaz Kylheku  <kaz@kylheku.com>

	* place.tl (rlet): For the sake of sane evaluation order
	in the face of unknown side effects, do not thread symbolic references;
	only propagate constants.

2015-05-12  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (env_vb_to_fb): Allow null env argument. This
	case occurs when (flet () ...) is expanded.

2015-05-12  Kaz Kylheku  <kaz@kylheku.com>

	DWIM places must use Lisp-1 semantics.

	This really only affects code which does something like
	(set [f x] y) and f resolves as a function. (The TXR Program
	bent over backwards to install a mutable object into a function
	binding.) In this situation, we need to update the function binding
	f, rather than some variable f.

	* eval.c (op_lisp1_setq, op_lisp1_value): New static functions.
	(eval_init): Register sys:lisp1-setq and sys:lisp1-value
	special forms.

	* place.tl (sys:*lisp1*): New special variable.
	(sys:l1-setq, sys:l1-val): New macros, optimizing
	versions of sys:lisp1-setq and sys:lisp1-value special operators.
	(sys:sym-place-update-expander, sys:sym-place-clobber-expander):
	React to sys:*lisp1* variable by doing symbol access using Lisp-1
	semantics, with help of newly introduced macros and special forms.
	(dwim): Bind sys:*lisp1* to true, if main argument is a symbolic place,
	so that the update is done using Lisp-1 semantics. Use the
	sys:l1-val operator when evaluating arguments.

2015-05-12  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (lookup_var_l): Gut this function of its silly